@@ -4,6 +4,8 @@ cdebconf (0.135) UNRELEASED; urgency=low
   * In GTK+ frontend, do not run a specific handler when the main window is
     closed on normal shutdown.
   * In GTK+ frontend, fix propagation of errors in question handlers.
+  * In GTK+ frontend, return an error when the number of options in Choices and
+    Choices-C mismatch instead of triggering an assertion failure.
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 09 Sep 2008 16:57:58 +0200
 
